# demo_cpp

./: CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  run_cmake.sh
c/: Makefile  playgl.c  playstrtok.c  readstrings.c  scopenread.c  udsock_srv.c
c/data/: textlines.txt
src/: demo_condvar.cpp  demo_cpmv.cpp  demo_find_closest.cpp  demo_map.cpp  demo_ranges.cpp  demo_read_stl.cpp  demo_rotations.cpp  demo_rvalue.cpp  demo_span.cpp  demo_vec.cpp  helpers.h  myvec.h
